패커스 세그먼트 일부 기능 개발 후 커밋

--- a/packus/web/templates/segments.html
+++ b/packus/web/templates/segments.html
@@ -1,2 +1,202 @@
 <!--세그먼트 생성 화면-->
-<h4>패커스 회원 모델링</h4>
+
+{% block content %}
+
+    <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent" id="pills-segments" role="tabpanel" aria-labeleledby="pills-segments">
+        <div class="container-fluid">
+          <div class="navbar-wrapper">
+            <div class="navbar-toggle">
+              <button type="button" class="navbar-toggler">
+                <span class="navbar-toggler-bar bar1"></span>
+                <span class="navbar-toggler-bar bar2"></span>
+                <span class="navbar-toggler-bar bar3"></span>
+              </button>
+            </div>
+            <a class="navbar-brand" href="javascript:;">회원 세그먼트</a>
+          </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar navbar-kebab"></span>
+            <span class="navbar-toggler-bar navbar-kebab"></span>
+            <span class="navbar-toggler-bar navbar-kebab"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <form>
+              <div class="input-group no-border">
+                <input type="text" value="" class="form-control" placeholder="Search...">
+                <div class="input-group-append">
+                  <div class="input-group-text">
+                    <i class="nc-icon nc-zoom-split"></i>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link btn-magnify" href="javascript:;">
+                  <i class="nc-icon nc-layout-11"></i>
+                  <p>
+                    <span class="d-lg-none d-md-block">Stats</span>
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item btn-rotate dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="nc-icon nc-bell-55"></i>
+                  <p>
+                    <span class="d-lg-none d-md-block">Some Actions</span>
+                  </p>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn-rotate" href="javascript:;">
+                  <i class="nc-icon nc-settings-gear-65"></i>
+                  <p>
+                    <span class="d-lg-none d-md-block">Account</span>
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- End Navbar -->
+
+
+
+
+    <div class="content">
+        <div class="row">
+            <div class="col-md-5 col-sm-5">
+                <div class="card">
+                    <div class="card-header border-bottom pt-3 pb-2 pl-3">
+                    <h5 class="card-title m-0">세그먼트 생성</h5>
+<!--                    <p class="card-category">24 Hours performance</p>-->
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row mb-4">
+                                <div class="col-sm-3">모델명</div>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" id="inputSegModalName" aria-describedby="segmentNm">
+                                    <small id="segmentNm" class="form-text text-muted">저장할 세그먼트 모델명을 입력하세요.</small>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-4">
+                                <div class="col-sm-3">연령</div>
+                                <div class="col-sm-9">
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="ageCheck1" value="20대 초반" checked="checked">
+                                        <label class="form-check-label" for="ageCheck1">18-24</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="ageCheck2" value="30대 초반">
+                                        <label class="form-check-label" for="ageCheck2">25-34</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="ageCheck3" value="40대 초반">
+                                        <label class="form-check-label" for="ageCheck3">35-44</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="ageCheck4" value="50대 초반">
+                                        <label class="form-check-label" for="ageCheck4">45-54</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="ageCheck5" value="60대 초반">
+                                        <label class="form-check-label" for="ageCheck5">55-64</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="ageCheck6" value="70대 초반">
+                                        <label class="form-check-label" for="ageCheck6">65-74</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-4">
+                                <div class="col-sm-3">성별</div>
+                                <div class="col-sm-9">
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="sexCheck1" value="남성" checked="checked">
+                                        <label class="form-check-label" for="sexCheck1">남성</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="sexCheck2" value="여성">
+                                        <label class="form-check-label" for="sexCheck2">여성</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="sexCheck3" value="모름">
+                                        <label class="form-check-label" for="sexCheck3">알 수 없음</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-4">
+                                <div class="col-sm-3">업종</div>
+
+                            </div>
+                            <div class="form-group row mb-4">
+                                <div class="col-sm-3">구매액</div>
+                                <div class="col-sm-9">
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="priceCheck1" value="20만원 미만" checked="checked">
+                                        <label class="form-check-label" for="priceCheck1">20만원 미만</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="priceCheck2" value="20 - 50만원">
+                                        <label class="form-check-label" for="priceCheck2">20 - 50만원</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="priceCheck3" value="50 - 100만원">
+                                        <label class="form-check-label" for="priceCheck3">50 - 100만원</label>
+                                    </div>
+                                    <div class="form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="priceCheck4" value="100만원 초과">
+                                        <label class="form-check-label" for="priceCheck4">100만원 초과</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-primary float-right saveSeg">저장</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-7 col-sm-7" id="segList">
+                <div class="card">
+                    <div class="card-header border-bottom pt-3 pb-2 pl-3">
+                    <h5 class="card-title m-0">세그먼트 리스트</h5>
+    <!--                <p class="card-category">24 Hours performance</p>-->
+                    </div>
+                    <div class="card-body" style="height: 650px; overflow: auto;">
+                        <div class="list-group">
+                          <div class="list-group-item list-group-item-action">
+                              모델명0(40대, 남성, 일반음식점, 20만원 미만)
+                              <button type="button" class="btn btn-sm btn-danger float-right m-0 removeSeg">삭제</button>
+                          </div>
+<!--                          <div class="list-group-item list-group-item-action">-->
+<!--                              모델명1(50대, 여성, 인터넷/PC방, 100만원 초과)-->
+<!--                              <button type="button" class="btn btn-sm btn-danger float-right m-0 removeSeg">삭제</button>-->
+<!--                          </div>-->
+<!--                          <div class="list-group-item list-group-item-action">-->
+<!--                              모델명2(30대, 여성, 매운탕전문점, 50만원 이상 100만원 미만)-->
+<!--                              <button type="button" class="btn btn-sm btn-danger float-right m-0 removeSeg">삭제</button>-->
+<!--                          </div>-->
+<!--                          <div class="list-group-item list-group-item-action">-->
+<!--                              모델명3(30대, 남성, 일반한식/백반, 100만원 초과)-->
+<!--                              <button type="button" class="btn btn-sm btn-danger float-right m-0 removeSeg">삭제</button>-->
+<!--                          </div>-->
+<!--&lt;!&ndash;                      <div class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">40대, 여성, 일반 음식점, 20만원 이상 50만원 미만</div>&ndash;&gt;-->
+<!--                          <div class="list-group-item list-group-item-action">모델명4(50대, 여성, 인터넷/PC방, 100만원 초과)</div>-->
+<!--                          <div class="list-group-item list-group-item-action">모델명5(30대, 여성, 매운탕전문점, 50만원 이상 100만원 미만)</div>-->
+<!--                          <div class="list-group-item list-group-item-action">모델명6(30대, 남성, 일반한식/백반, 100만원 초과)</div>-->
+<!--                          <div class="list-group-item list-group-item-action">모델명7(50대, 여성, 인터넷/PC방, 100만원 초과)</div>-->
+<!--                          <div class="list-group-item list-group-item-action">모델명8(30대, 여성, 매운탕전문점, 50만원 이상 100만원 미만)</div>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
