--- a/packus/web/templates/base.html
+++ b/packus/web/templates/base.html
@@ -10,7 +10,7 @@
   {% endblock %}
 </head>
 <body>
-<div class="container-fluid">
+<div class="wrapper">
   <!--  내용부분 -->
   {% block content %}{% endblock %}
 </div>
@@ -20,12 +20,18 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!--css-->
 <link rel="stylesheet" href="{{ url_for('static', filename='dist/base.css') }}">
+<link rel="stylesheet" href="/static/css/demo.css">
 <!--javascript-->
 <script type="module" src="{{ url_for('static', filename='dist/base.js') }}"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!--<script src="/static/js/demo.js" type="text/javascript"></script>-->
+<script src="/static/js/paper-dashboard.min.js" type="text/javascript"></script>
 {% block script %}
+<script type="text/javascript">
+
+</script>
 {% endblock %}
 
 </body>
