--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -1,34 +1,47 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid mt-4">
-    <div class="row">
-        <div class="col-12">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-dashboard" role="tab"
-                       aria-controls="pills-home" aria-selected="true">대시보드</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-modeling" role="tab"
-                       aria-controls="pills-profile" aria-selected="false">회원모델링</a>
-                </li>
-            </ul>
-        </div>
+    <div class="sidebar" data-color="white" data-active-color="danger">
+      <div class="logo">
+        <a href="/dashboard" class="simple-text logo-normal">
+          Packus Dashboard
+        </a>
+      </div>
+      <div class="sidebar-wrapper">
+        <ul class="nav">
+
+            <li
+              {% if menu == 'dashboard' %}
+                class="active"
+              {% endif %}
+            >
+            <a href="/dashboard" id="pills-dashboard">
+              <i class="nc-icon nc-bank"></i>
+              <p>대시보드</p>
+            </a>
+          </li>
+           <li
+              {% if menu == 'segments' %}
+                class="active"
+              {% endif %}
+            >
+            <a href="/segments" id="pills-segments">
+              <i class="nc-icon nc-diamond"></i>
+              <p>세그먼트</p>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="pills-dashboard" role="tabpanel" aria-labelledby="home-tab">
-                    {% include 'dashboard.html' %}
-                </div>
-                <div class="tab-pane fade" id="pills-modeling" role="tabpanel" aria-labelledby="profile-tab">
-                    {% include 'segments.html' %}
-                </div>
-            </div>
-        </div>
+
+    <div class="main-panel">
+      {% if menu == 'segments' %}
+        {% include "segments.html" %}
+      {% elif menu == 'dashboard' %}
+        {% include "dashboard.html" %}
+      {% endif %}
     </div>
-</div>
+
 {% endblock %}
 
 <!--html 파일마다 개별적으로 js 파일을 가져와야 할 때 사용-->
