--- a/packus/web/templates/base.html
+++ b/packus/web/templates/base.html
@@ -27,7 +27,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <!--<script src="/static/js/demo.js" type="text/javascript"></script>-->
-<script src="/static/js/paper-dashboard.min.js" type="text/javascript"></script>
+<!--<script src="/static/js/paper-dashboard.min.js" type="text/javascript"></script>-->
 {% block script %}
 <script type="text/javascript">
 
