--- a/packus/web/templates/segments/segments.html
+++ b/packus/web/templates/segments/segments.html
@@ -77,15 +77,15 @@
                     <div class="card-body">
                         <form>
                             <div class="form-group row mb-4">
-                                <div class="col-sm-3">모델명</div>
-                                <div class="col-sm-9">
+                                <div class="col-sm-2 text-center my-auto">모델명</div>
+                                <div class="col-sm-10">
                                     <input type="text" class="form-control" id="seg-name" aria-describedby="segmentNm">
                                     <small id="segmentNm" class="form-text text-muted">저장할 세그먼트 모델명을 입력하세요.</small>
                                 </div>
                             </div>
-                            <div class="form-group row mb-4">
-                                <div class="col-sm-3">연령</div>
-                                <div class="col-sm-9">
+                            <!--<div class="form-group row mb-4">
+                                <div class="col-sm-2 text-center my-auto">연령</div>
+                                <div class="col-sm-10">
                                     <div class="form-check-inline">
                                         <input class="form-check-input" type="checkbox" id="ageCheck1" value="18-24" name="age">
                                         <label class="form-check-label" for="ageCheck1">18-24</label>
@@ -111,10 +111,10 @@
                                         <label class="form-check-label" for="ageCheck6">65-74</label>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="form-group row mb-4">
-                                <div class="col-sm-3">성별</div>
-                                <div class="col-sm-9">
+                                <div class="col-sm-2 text-center my-auto">성별</div>
+                                <div class="col-sm-10">
                                     <div class="form-check-inline">
                                         <input class="form-check-input" type="checkbox" id="sexCheck1" name="sexfl" value="남성">
                                         <label class="form-check-label" for="sexCheck1">남성</label>
@@ -130,12 +130,83 @@
                                 </div>
                             </div>
                             <div class="form-group row mb-4">
-                                <div class="col-sm-3">업종</div>
-
+                                <div class="col-sm-2 text-center my-auto">업종</div>
+                                <div class="col-sm-10" id="segUpjong">
+                                    <div class="card" style="box-shadow: none; border: 1px solid #dddddd;">
+                                        <div class="card-body d-flex">
+                                            <div class="col-4 p-0">
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong1" name="" value="">
+                                                    <label class="form-check-label" for="upjong1">기타고기요리</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong2" name="" value="">
+                                                    <label class="form-check-label" for="upjong2">갈비/삼겹살</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong3" name="" value="">
+                                                    <label class="form-check-label" for="upjong3">고등어전문</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong4" name="" value="">
+                                                    <label class="form-check-label" for="upjong4">곱창/양구이전문</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong5" name="" value="">
+                                                    <label class="form-check-label" for="upjong5">낙지/오징어</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-4 p-0">
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong1" name="" value="">
+                                                    <label class="form-check-label" for="upjong1">기타고기요리</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong2" name="" value="">
+                                                    <label class="form-check-label" for="upjong2">갈비/삼겹살</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong3" name="" value="">
+                                                    <label class="form-check-label" for="upjong3">고등어전문</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong4" name="" value="">
+                                                    <label class="form-check-label" for="upjong4">곱창/양구이전문</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong5" name="" value="">
+                                                    <label class="form-check-label" for="upjong5">낙지/오징어</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-4 p-0">
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong1" name="" value="">
+                                                    <label class="form-check-label" for="upjong1">기타고기요리</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong2" name="" value="">
+                                                    <label class="form-check-label" for="upjong2">갈비/삼겹살</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong3" name="" value="">
+                                                    <label class="form-check-label" for="upjong3">고등어전문</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong4" name="" value="">
+                                                    <label class="form-check-label" for="upjong4">곱창/양구이전문</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input class="form-check-input" type="checkbox" id="upjong5" name="" value="">
+                                                    <label class="form-check-label" for="upjong5">낙지/오징어</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group row mb-4">
-                                <div class="col-sm-3">구매액</div>
-                                <div class="col-sm-9">
+                                <div class="col-sm-2 text-center my-auto">구매액</div>
+                                <div class="col-sm-10">
                                     <div class="form-check-inline">
                                         <input class="form-check-input" type="checkbox" id="priceCheck1" name="sales" value="20만원 미만">
                                         <label class="form-check-label" for="priceCheck1">20만원 미만</label>
@@ -165,7 +236,7 @@
                     <h5 class="card-title m-0">세그먼트 리스트</h5>
     <!--                <p class="card-category">24 Hours performance</p>-->
                     </div>
-                    <div class="card-body" style="height: 650px; overflow: auto;">
+                    <div class="card-body" style="height: 745px; overflow: auto;">
                         <div class="list-group" id="segments-list">
                         </div>
                     </div>
