--- a/packus/web/templates/segments/segments.html
+++ b/packus/web/templates/segments/segments.html
@@ -112,7 +112,7 @@
                                     </div>
                                 </div>
                             </div>-->
-                            <div class="form-group row mb-4">
+                            <!-- <div class="form-group row mb-4">
                                 <div class="col-sm-2 text-center my-auto">성별</div>
                                 <div class="col-sm-10">
                                     <div class="form-check-inline">
@@ -128,7 +128,7 @@
                                         <label class="form-check-label" for="sexCheck3">알 수 없음</label>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="form-group row mb-4">
                                 <div class="col-sm-2 text-center my-auto">업종</div>
                                 <div class="col-sm-10" id="segUpjong">
